Rephrase Abstract and reorder pseudocode.

--- a/thesis/abstract.tex
+++ b/thesis/abstract.tex
@@ -1,9 +1,9 @@
 \renewcommand{\abstractname}{Abstract}
 \begin{abstract}
-Pathfinding-Algorithmen sind Programmabläufe, welche in der Wirtschaft in vielen Anwendungen vorkommen, wie zum Beispiel Video Spielen, Simulationen oder der Automobilindustrie. 
-Diese Berufsmaturitätsarbeit implementiert mehrere solcher Pathfinding-Algorithmen in einer interaktiven JavaScript-Webapplikation und vergleicht sie auf mehrere Eigenschaften miteinander. 
-Der Vergleich ist visuell dargestellt und vom Nutzer durch Parameter in der Benutzeroberfläche anpassbar. 
-Ausgewählt wurden dafür die drei Pathfinder: A*, BestFirstFinder und BreadthFirstFinder.
+Pathfinding-Algorithmen sind Programmabläufe, welche in der Wirtschaft in vielen Anwendungen vorkommen, wie zum Beispiel in Video Spielen, Simulationen oder der Automobilindustrie. 
+Im Rahmen dieser Berufsmaturitätsarbeit wird eine Webapplikation entwickelt, die den Benutzer in das Thema der Pathfinder-Algorithmen einführt und einen interaktiven Vergleich von drei ausgewählten Pathfindern ermöglicht und dazu Messungen mit drei Merkmalen macht. Im Rahmen der Arbeit wählen wir den A*, BestFirst, und BreadthFirstFinder.
+Die Webapplikation generiert für den Vergleich ein Zufallslabyrinth, markiert Start- und Endpünkte und lässt mehrere Vergleiche in Serie geschaltet zu.
+Mithilfe des Pathfinder-Vergleichers werden im Rahmen der Arbeit auch Statistiken erstellt und ausgewertet und im schriftlichen Teil die Funktionsweisen der Pathfinder erläutert.
 \\
-Die Webapplikation ist freie Software und unter \url{https://bma.fuerbringer.info} zugänglich.
+  Die Webapplikation ist unter \url{https://bma.fuerbringer.info} zugänglich. Der dazugehörige Quellcode ist frei unter \url{https://github.com/fuerbringer/bma} erhältlich.
 \end{abstract}
